<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/sign_in_layout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    >
  <android.support.design.widget.TextInputLayout
      android:id="@+id/si_til_email"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_marginBottom="8dp"
      android:hint="@string/hint_email"
      android:visibility="visible"
      app:errorEnabled="true"
      >

    <android.support.design.widget.TextInputEditText
        android:id="@+id/si_et_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textEmailAddress"
        />
  </android.support.design.widget.TextInputLayout>
  <android.support.design.widget.TextInputLayout
      android:id="@+id/si_til_password"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:hint="@string/hint_password"
      android:visibility="visible"
      app:errorEnabled="true"
      >
    <android.support.design.widget.TextInputEditText
        android:id="@+id/si_et_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        />
  </android.support.design.widget.TextInputLayout>

  <android.support.design.button.MaterialButton
      android:id="@+id/si_btn_signin"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:text="@string/sign_in_enter_screen"
      android:textAppearance="@style/TextAppearance.MaterialComponents.Button"
      android:visibility="visible"
      style="@style/Widget.MaterialComponents.Button"
      />
  <android.support.design.button.MaterialButton
      android:id="@+id/si_btn_signup"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:text="@string/sign_up_enter_screen"
      android:textAppearance="@style/TextAppearance.MaterialComponents.Button"
      style="@style/Widget.MaterialComponents.Button.TextButton"
      />
</LinearLayout>